--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Web Technologies Fall 2024 - Lab 1</title>
   </head>
   <body>
-    <!-- Empty page -->
+    <h1>Welcome to My GitHub Pages Site!</h1>
+    <p>This is the webpage for Lab 1 of Web Technologies Fall 2024.</p>
   </body>
 </html>
