--- a/index.html
+++ b/index.html
@@ -1,10 +1,90 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Web Technologies Fall 2024 - Lab 1</title>
-  </head>
-  <body>
-    <h1>Welcome to My GitHub Pages Site!</h1>
-    <p>This is the webpage for Lab 1 of Web Technologies Fall 2024.</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 1 - Web Technologies Fall 2024</title>
+</head>
+<body>
+    <!-- Heading section -->
+    <h1>Welcome to My Web Page</h1>
+    <h2>About Me</h2>
+    <h3>Personal Interests</h3>
+    <h4>My Favorite Hobbies</h4>
+    
+    <!-- Image with alt text -->
+    <img src="your-profile-photo.jpg" alt="Profile picture of [Your Name]" style="width:150px; height:auto;" />
+
+    <!-- Paragraphs and text with <p>, <br />, <blockquote>, <hr> -->
+    <p>Hello! My name is [Your Name] and this is my webpage for Lab 1 of Web Technologies Fall 2024.<br />
+    Below, you'll find a little more about me and some of my interests.<br /> I love learning about web development and coding.</p>
+
+    <blockquote>
+        "The best way to predict the future is to invent it." - Alan Kay
+    </blockquote>
+
+    <hr />
+
+    <!-- Unordered list -->
+    <p>Some of my favorite activities include:</p>
+    <ul>
+        <li>Soccer</li>
+        <li>Baking cupcakes</li>
+    </ul>
+
+    <!-- Ordered list -->
+    <p>Steps to making cupcakes:</p>
+    <ol>
+        <li>Preheat the oven</li>
+        <li>Mix the ingredients</li>
+        <li>Bake for 20 minutes</li>
+    </ol>
+
+    <!-- Table with hobbies -->
+    <p>Here are a few of my hobbies:</p>
+    <table border="1">
+        <tr>
+            <th>Name</th>
+            <th>Hobby</th>
+            <th>Last time I did this</th>
+        </tr>
+        <tr>
+            <td>[Your Name]</td>
+            <td>Soccer</td>
+            <td>Last weekend</td>
+        </tr>
+        <tr>
+            <td>[Your Name]</td>
+            <td>Baking</td>
+            <td>Yesterday</td>
+        </tr>
+        <tr>
+            <td>[Your Name]</td>
+            <td>Reading</td>
+            <td>Last night</td>
+        </tr>
+    </table>
+
+    <hr />
+
+    <!-- Links with target="_blank" for opening in new tab -->
+    <p>For more information, check out the <a href="https://www.slu.edu" target="_blank">Saint Louis University website</a>.</p>
+
+    <!-- Link to another website -->
+    <p>You can also visit my <a href="https://www.github.com">GitHub profile</a>.</p>
+
+    <!-- Select box for user options -->
+    <p>What's your favorite hobby?</p>
+    <select name="hobbies">
+        <option value="soccer">Soccer</option>
+        <option value="baking">Baking</option>
+        <option value="reading">Reading</option>
+    </select>
+
+    <!-- Centering text -->
+    <center>
+        <p>Thanks for visiting!</p>
+    </center>
+
+</body>
 </html>
