--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h4>My Favorite Hobbies</h4>
     
     <!-- Image with alt text -->
-    <img src="your-profile-photo.jpg" alt="Profile picture of [Your Name]" style="width:150px; height:auto;" />
+    <img src="Photo.jpg" alt="Profile picture of [Your Name]" style="width:150px; height:auto;" />
 
     <!-- Paragraphs and text with <p>, <br />, <blockquote>, <hr> -->
     <p>Hello! My name is [Your Name] and this is my webpage for Lab 1 of Web Technologies Fall 2024.<br />
