--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
     <!-- Heading section -->
     <h1>Welcome to My Web Page</h1>
-    <h2>About Me</h2>
-    <h3>Personal Interests</h3>
-    <h4>My Favorite Hobbies</h4>
+    <h2>My name is JEET R PATEL</h2>
+    <h3>my intrest is to work on python programming</h3>
+    <h4>My hobbies are watching movie and web series.</h4>
     
     <!-- Image with alt text -->
-    <img src="Photo.jpg" alt="Profile picture of [Your Name]" style="width:150px; height:auto;" />
+    <img src="Photo.jpg" alt="JEET R PATEL" style="width:150px; height:auto;" />
 
     <!-- Paragraphs and text with <p>, <br />, <blockquote>, <hr> -->
-    <p>Hello! My name is [Your Name] and this is my webpage for Lab 1 of Web Technologies Fall 2024.<br />
+    <p>Hello! My name is JEET and this is my webpage for Lab 1 of Web Technologies Fall 2024.<br />
     Below, you'll find a little more about me and some of my interests.<br /> I love learning about web development and coding.</p>
 
     <blockquote>
-        "The best way to predict the future is to invent it." - Alan Kay
+        "Try and Try you will successed." - Imbrahm obama
     </blockquote>
 
     <hr />
@@ -28,12 +28,12 @@
     <!-- Unordered list -->
     <p>Some of my favorite activities include:</p>
     <ul>
-        <li>Soccer</li>
-        <li>Baking cupcakes</li>
+        <li>Baseball</li>
+        <li>cooking food</li>
     </ul>
 
     <!-- Ordered list -->
-    <p>Steps to making cupcakes:</p>
+    <p>Steps to how to cook my fav noodles:</p>
     <ol>
         <li>Preheat the oven</li>
         <li>Mix the ingredients</li>
@@ -44,22 +44,22 @@
     <p>Here are a few of my hobbies:</p>
     <table border="1">
         <tr>
-            <th>Name</th>
-            <th>Hobby</th>
-            <th>Last time I did this</th>
+            <th>Jeet</th>
+            <th>Sky diving</th>
+            <th>In canada</th>
         </tr>
         <tr>
-            <td>[Your Name]</td>
-            <td>Soccer</td>
-            <td>Last weekend</td>
+            <td>Jeet Patel</td>
+            <td>River Rafting</td>
+            <td>Last month in mexico</td>
         </tr>
         <tr>
-            <td>[Your Name]</td>
-            <td>Baking</td>
+            <td>Patel Jeet</td>
+            <td>swimming</td>
             <td>Yesterday</td>
         </tr>
         <tr>
-            <td>[Your Name]</td>
+            <td>Patel Subh</td>
             <td>Reading</td>
             <td>Last night</td>
         </tr>
@@ -76,14 +76,15 @@
     <!-- Select box for user options -->
     <p>What's your favorite hobby?</p>
     <select name="hobbies">
-        <option value="soccer">Soccer</option>
-        <option value="baking">Baking</option>
-        <option value="reading">Reading</option>
+        <option value="sky diving">Sky diving</option>
+        <option value="River Rafting">River Rafting</option>
+        <option value="swimming">Swimming</option>
+        <option value="Reading">Reading</option>
     </select>
 
     <!-- Centering text -->
     <center>
-        <p>Thanks for visiting!</p>
+        <p>Thanks for time!</p>
     </center>
 
 </body>
