--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     Below, you'll find a little more about me and some of my interests.<br /> I love learning about web development and coding.</p>
 
     <blockquote>
-        "Try and Try you will successed." - Imbrahm obama
+        "Try and Try you will succeed." - Imbrahm Obama
     </blockquote>
 
     <hr />
@@ -44,9 +44,9 @@
     <p>Here are a few of my hobbies:</p>
     <table border="1">
         <tr>
-            <th>Jeet</th>
-            <th>Sky diving</th>
-            <th>In canada</th>
+            <th>Name</th>
+            <th>hobby</th>
+            <th>Last time i did this</th>
         </tr>
         <tr>
             <td>Jeet Patel</td>
@@ -76,7 +76,6 @@
     <!-- Select box for user options -->
     <p>What's your favorite hobby?</p>
     <select name="hobbies">
-        <option value="sky diving">Sky diving</option>
         <option value="River Rafting">River Rafting</option>
         <option value="swimming">Swimming</option>
         <option value="Reading">Reading</option>
