--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 1 - Web Technologies Fall 2024</title>
 </head>
-<body>
+<body style="background-color: light blue;">
     <!-- Heading section -->
     <h1>Welcome to My Web Page</h1>
     <h2>My name is JEET R PATEL</h2>
-    <h3>my intrest is to work on python programming</h3>
-    <h4>My hobbies are watching movie and web series.</h4>
+    <h3>my interest is to work on Python programming</h3>
+    <h4>My hobbies are watching movies and web series.</h4>
     
     <!-- Image with alt text -->
     <img src="Photo.jpg" alt="JEET R PATEL" style="width:150px; height:auto;" />
 
     <!-- Paragraphs and text with <p>, <br />, <blockquote>, <hr> -->
     <p>Hello! My name is JEET and this is my webpage for Lab 1 of Web Technologies Fall 2024.<br />
-    Below, you'll find a little more about me and some of my interests.<br /> I love learning about web development and coding.</p>
+    Below, I've included a little more about me and some of my interests.<br /> I love learning about web development and coding.</p>
 
     <blockquote>
         "Try and Try you will succeed." - Imbrahm Obama
